Se agrega info al index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>¡Bienvenida Vanina!</h1>
+    <p>Te hago entrega del desafio 2.</p>
+    <p>La idea era consultar la edad para saber si se le puede vender alcohol.</p>
     <script src="script.js"></script>
 </body>
 </html>
