se modifica el index

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Multicotizador de Seguros</title>
 </head>
 <body>
-    <h1>¡Bienvenida Vanina!</h1>
-    <p>Te hago entrega del desafio 2.</p>
-    <p>La idea era consultar la edad para saber si se le puede vender alcohol.</p>
+    <h1>¡Bienvenido al multicotizador del Banco Galicia!</h1>
+    <h2>Aca podras cotizar los seguros que vos quieras</h2>
     <script src="script.js"></script>
 </body>
 </html>
